# RealFrontIO

./: .env.example  API_DEPLOYMENT_STRATEGY.md  README_REALFRONT.md  docker-compose.realfront.yml  docs_patch_channels.txt  package.json  turbo.json
apps/client/: package.json
apps/server/: package.json
capsule/: .env.example  Cargo.toml  cargo_patch.txt
capsule/proto/: world_events.proto
capsule/src/: admin_api.rs  admin_patch.txt  astronomy.rs  climate.rs  config.rs  defcon.rs  entity_extractor.rs  fetcher.rs  historical_patch.txt  infra_patch.txt  infrastructure.rs  main.rs  maritime.rs  meteorology.rs  orbitals.rs  parsers_agricultural.rs  parsers_astronomy.rs  parsers_aviation.rs  parsers_bio_space.rs  parsers_combat.rs  parsers_global_econ.rs  parsers_hydro.rs  parsers_iaea.rs  parsers_news.rs  parsers_seismic.rs  source_tier.rs  spymaster.rs  telemetry.rs
client/: .env.example
scripts/: migrate_to_monorepo.sh
server/: .env.example
src/client/: RealFrontClient.ts
src/client/audio/: AudioManager.ts  RadioChatterEngine.ts  SeismicAudioAdapter.ts  VoiceJammingManager.ts
src/client/network/: WebRtcCommsManager.ts
src/client/render/: BlackoutShader.ts  FlirThermalShader.ts  HempAuroraShader.ts  HexaLensFilter.ts  NatoSymbologyRenderer.ts  NuclearWinterShader.ts  RayleighScatteringShader.ts  Wgs84GridProjector.ts
src/client/shaders/: climate_lens.txt  cyber_distortion.txt  thermal_lens.txt
src/client/ui/: BloombergTerminalUI.ts  BrutalistTickerUI.ts  C4isrMultiMonitorManager.ts  DeepStateTerminal.ts  DefconHUD.ts  DoomsdayClockRenderer.ts  (+4 more)
(+105 files in other folders)
