[package]
name = "openfront-capsule"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
axum = { version = "0.7", features = ["tokio", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
# --- NEW: HTTP & ENV Management ---
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
# --- NEW: XML parsing for RSS/Atom news feeds ---
quick-xml = { version = "0.31", features = ["serialize"] }
